[gd_scene load_steps=18 format=2]

[ext_resource path="res://TileButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/AiPlayer.gd" type="Script" id=3]
[ext_resource path="res://Sprites/XGlow.png" type="Texture" id=4]
[ext_resource path="res://Fonts/ARBERKLEY.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/OGlow.png" type="Texture" id=6]
[ext_resource path="res://Sprites/BtnMenu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite

# Variáveis que guardam as sprites que podem ser utilizadas
const oTex = preload(\"res://Sprites/OGlow.png\")
const xTex = preload(\"res://Sprites/XGlow.png\")


onready var CTEs = $\"/root/Ctes\"


func _ready():
	var main = get_tree().get_root().get_node(\"Main\")
	main.connect(\"player_Changed\", self, \"_on_player_changed\")

func _on_player_changed(val):
	#var val = get_tree().get_root().get_node(\"Main\").ActivePlayer
	if (val == CTEs.ValO):
		self.texture = oTex
	elif (val == CTEs.ValX):
		self.texture = xTex
	else:
		self.texture = null
"

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=4]
script/source = "extends Label

# Variáveis que guardam as sprites que podem ser utilizadas
const oTex = preload(\"res://Sprites/OGlow.png\")
const xTex = preload(\"res://Sprites/XGlow.png\")


onready var Ctrl = $\"/root/CtrlGame\"


func _ready():
	Ctrl.connect(\"change_placar\", self, \"_on_placar_changed\")

func _on_placar_changed():
	text = str(Ctrl.VitoriasX)
"

[sub_resource type="GDScript" id=5]
script/source = "extends Label

# Variáveis que guardam as sprites que podem ser utilizadas
const oTex = preload(\"res://Sprites/OGlow.png\")
const xTex = preload(\"res://Sprites/XGlow.png\")


onready var Ctrl = $\"/root/CtrlGame\"


func _ready():
	Ctrl.connect(\"change_placar\", self, \"_on_placar_changed\")

func _on_placar_changed():
	text = str(Ctrl.VitoriasO)
"

[sub_resource type="GDScript" id=6]
script/source = "extends Label

# Variáveis que guardam as sprites que podem ser utilizadas
const oTex = preload(\"res://Sprites/OGlow.png\")
const xTex = preload(\"res://Sprites/XGlow.png\")


onready var Ctrl = $\"/root/CtrlGame\"


func _ready():
	Ctrl.connect(\"change_placar\", self, \"_on_placar_changed\")

func _on_placar_changed():
	text = str(Ctrl.Empates)
"

[sub_resource type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 0.937255 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="DynamicFont" id=9]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 5 )

[node name="Main" type="Control"]
margin_right = 550.0
margin_bottom = 650.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoTabuleiro" type="Node2D" parent="."]
position = Vector2( 0, 50 )

[node name="TopHorizontal" type="ColorRect" parent="FundoTabuleiro"]
margin_left = 50.0
margin_top = 195.0
margin_right = 500.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomHorizontal" type="ColorRect" parent="FundoTabuleiro"]
margin_left = 50.0
margin_top = 345.0
margin_right = 500.0
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftVertical" type="ColorRect" parent="FundoTabuleiro"]
margin_left = 195.0
margin_top = 50.0
margin_right = 205.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightVertical" type="ColorRect" parent="FundoTabuleiro"]
margin_left = 345.0
margin_top = 50.0
margin_right = 355.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="Node2D" parent="."]
position = Vector2( 0, 50 )

[node name="TileButton1" parent="Tiles" instance=ExtResource( 1 )]
margin_left = 58.5
margin_top = 58.5
margin_right = 186.5
margin_bottom = 186.5
Row = 0
Col = 0

[node name="TileButton2" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 211.0
margin_top = 58.5
margin_right = 339.0
margin_bottom = 186.5
Row = 0
Col = 1

[node name="TileButton3" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 363.5
margin_top = 58.5
margin_right = 491.5
margin_bottom = 186.5
Row = 0
Col = 2

[node name="TileButton4" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 58.5
margin_top = 211.0
margin_right = 186.5
margin_bottom = 339.0
Row = 1
Col = 0

[node name="TileButton5" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 211.0
margin_top = 211.0
margin_right = 339.0
margin_bottom = 339.0
Row = 1
Col = 1

[node name="TileButton6" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 363.5
margin_top = 211.0
margin_right = 491.5
margin_bottom = 339.0
Row = 1
Col = 2

[node name="TileButton7" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 58.5
margin_top = 363.5
margin_right = 186.5
margin_bottom = 491.5
Row = 2
Col = 0

[node name="TileButton8" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 211.0
margin_top = 363.5
margin_right = 339.0
margin_bottom = 491.5
Row = 2
Col = 1

[node name="TileButton9" parent="Tiles" instance=ExtResource( 1 )]
anchor_right = 50.0
margin_left = 363.5
margin_top = 363.5
margin_right = 491.5
margin_bottom = 491.5
Row = 2
Col = 2

[node name="Players" type="Node2D" parent="."]

[node name="AiPlayer" type="Node2D" parent="Players"]
script = ExtResource( 3 )

[node name="CamadaJogo" type="CanvasLayer" parent="."]
layer = 10

[node name="Indicador" type="Node2D" parent="CamadaJogo"]
position = Vector2( 0, 600 )

[node name="PlayerLabel" type="Label" parent="CamadaJogo/Indicador"]
modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
margin_left = 150.0
margin_right = 280.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Jogador:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CamadaJogo/Indicador"]
position = Vector2( 320, 20 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
script = SubResource( 2 )

[node name="Placar" type="Node2D" parent="CamadaJogo"]

[node name="PlacarX" type="Sprite" parent="CamadaJogo/Placar"]
position = Vector2( 50, 50 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="VitoriasX" type="Label" parent="CamadaJogo/Placar"]
margin_left = 100.0
margin_top = 30.0
margin_right = 180.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlacarO" type="Sprite" parent="CamadaJogo/Placar"]
position = Vector2( 225, 50 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="VitoriasO" type="Label" parent="CamadaJogo/Placar"]
margin_left = 275.0
margin_top = 30.0
margin_right = 355.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( -525.801, 410.458 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlacarEmpates" type="Label" parent="CamadaJogo/Placar"]
margin_left = 375.0
margin_top = 30.0
margin_right = 478.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( -525.801, 410.458 )
custom_fonts/font = SubResource( 3 )
text = "Empates:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empates" type="Label" parent="CamadaJogo/Placar"]
margin_left = 475.0
margin_top = 30.0
margin_right = 535.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( -525.801, 410.458 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMenu" type="Button" parent="CamadaJogo"]
margin_left = 475.0
margin_top = 575.0
margin_right = 615.0
margin_bottom = 709.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 7 )

[node name="CamadaOpcoes" type="CanvasLayer" parent="."]
layer = 20

[node name="Menu" type="Panel" parent="CamadaOpcoes"]
visible = false
margin_left = 50.0
margin_top = 48.5017
margin_right = 500.0
margin_bottom = 598.502
theme = SubResource( 7 )
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TituloMenu" type="Label" parent="CamadaOpcoes/Menu"]
anchor_right = 1.0
margin_top = 45.9255
margin_bottom = 85.9255
rect_pivot_offset = Vector2( -525.801, 410.458 )
custom_fonts/font = SubResource( 3 )
text = "Opções"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnResume" type="Button" parent="CamadaOpcoes/Menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -70.0
margin_right = -250.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CamadaOpcoes/Menu/BtnResume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Voltar ao Jogo"
align = 1
valign = 1

[node name="BtnQuit" type="Button" parent="CamadaOpcoes/Menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = -70.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CamadaOpcoes/Menu/BtnQuit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Sair"
align = 1
valign = 1

[node name="ChkMultiplayer" type="CheckButton" parent="CamadaOpcoes/Menu"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 100.0
margin_right = -40.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 10 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinDialog" type="ConfirmationDialog" parent="."]
margin_left = 150.0
margin_top = 225.0
margin_right = 400.0
margin_bottom = 325.0
popup_exclusive = true
window_title = "Someone Won!!!"
dialog_text = "Someone Won!!!"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="CamadaJogo/BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="CamadaOpcoes/Menu/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="CamadaOpcoes/Menu/BtnQuit" to="." method="onQuit"]
[connection signal="toggled" from="CamadaOpcoes/Menu/ChkMultiplayer" to="." method="_on_ChkMultiplayer_toggled"]
[connection signal="confirmed" from="WinDialog" to="." method="onPlayAgain"]
